[gd_scene load_steps=4 format=2]

[ext_resource path="res://credits.gd" type="Script" id=1]
[ext_resource path="res://tILESET.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy_loading_screen.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldLayout" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 14, 0, 1, 14, 2, 2, 14, 1, 3, 14, 3, 4, 14, 2, 5, 14, 2, 6, 14, 3, 7, 14, 4, 8, 3, 0, 9, 14, 0, 10, 14, 1, 11, 14, 3, 12, 14, 3, 13, 14, 1, 14, 14, 2, 15, 14, 3, 16, 14, 2, 17, 14, 2, 18, 14, 2, 19, 14, 4, 20, 4, 0, 21, 14, 0, 22, 14, 1, 23, 14, 3, 24, 14, 1, 25, 14, 3, 26, 14, 3, 27, 14, 3, 28, 14, 1, 29, 14, 4, 65536, 14, 65536, 65537, 14, 131074, 65538, 14, 65537, 65539, 14, 131074, 65540, 14, 65538, 65541, 14, 131074, 65542, 14, 65539, 65543, 14, 65540, 65544, 3, 0, 65545, 14, 65536, 65546, 14, 65537, 65547, 14, 131073, 65548, 14, 131075, 65549, 14, 131075, 65550, 14, 131074, 65551, 14, 131073, 65552, 14, 65537, 65553, 14, 131075, 65554, 14, 131073, 65555, 14, 65540, 65556, 4, 0, 65557, 14, 65536, 65558, 14, 131073, 65559, 14, 65539, 65560, 14, 131073, 65561, 14, 65538, 65562, 14, 65539, 65563, 14, 65539, 65564, 14, 131073, 65565, 14, 65540, 131072, 14, 65536, 131073, 14, 65539, 131074, 14, 131073, 131075, 14, 65539, 131076, 14, 65539, 131077, 14, 131075, 131078, 14, 65537, 131079, 14, 131076, 131080, 3, 0, 131081, 14, 65536, 131082, 14, 131074, 131083, 14, 65537, 131084, 14, 65537, 131085, 14, 131075, 131086, 14, 131075, 131087, 14, 65538, 131088, 14, 65538, 131089, 14, 65538, 131090, 14, 65537, 131091, 14, 131076, 131092, 4, 0, 131093, 14, 196608, 131094, 14, 196611, 131095, 14, 196611, 131096, 14, 196609, 131097, 14, 196609, 131098, 14, 0, 131099, 14, 65538, 131100, 14, 65537, 131101, 14, 131076, 196608, 14, 65536, 196609, 14, 65539, 196610, 14, 131074, 196611, 14, 65537, 196612, 14, 0, 196613, 14, 196609, 196614, 14, 196609, 196615, 14, 196612, 196616, 3, 0, 196617, 14, 65536, 196618, 14, 65539, 196619, 14, 65539, 196620, 14, 131075, 196621, 14, 65539, 196622, 14, 65537, 196623, 14, 131075, 196624, 14, 131073, 196625, 14, 131073, 196626, 14, 131075, 196627, 14, 131076, 196628, 8, 0, 196629, 8, 0, 196630, 8, 0, 196631, 8, 0, 196632, 12, 0, 196633, 11, 0, 196634, 14, 131072, 196635, 14, 65538, 196636, 14, 131073, 196637, 14, 65540, 262144, 14, 131072, 262145, 14, 65539, 262146, 14, 131073, 262147, 14, 65538, 262148, 14, 65540, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 11, 0, 262153, 14, 196608, 262154, 14, 0, 262155, 14, 131073, 262156, 14, 131075, 262157, 14, 131075, 262158, 14, 65539, 262159, 14, 65537, 262160, 14, 131073, 262161, 14, 131075, 262162, 14, 131073, 262163, 14, 0, 262164, 14, 2, 262165, 14, 1, 262166, 14, 1, 262167, 14, 3, 262168, 14, 4, 262169, 3, 0, 262170, 14, 65536, 262171, 14, 131073, 262172, 14, 65537, 262173, 14, 65540, 327680, 14, 131072, 327681, 14, 131074, 327682, 14, 65538, 327683, 14, 65537, 327684, 14, 0, 327685, 14, 2, 327686, 14, 2, 327687, 14, 4, 327688, 5, 0, 327689, 12, 0, 327690, 14, 65536, 327691, 14, 131074, 327692, 14, 65539, 327693, 14, 65537, 327694, 14, 131074, 327695, 14, 131073, 327696, 14, 65539, 327697, 14, 65537, 327698, 14, 131073, 327699, 14, 65539, 327700, 14, 65539, 327701, 14, 65539, 327702, 14, 65538, 327703, 14, 131074, 327704, 14, 65540, 327705, 3, 0, 327706, 14, 131072, 327707, 14, 65537, 327708, 14, 65539, 327709, 14, 131076, 393216, 14, 65536, 393217, 14, 65539, 393218, 14, 131074, 393219, 14, 131073, 393220, 14, 131074, 393221, 14, 131074, 393222, 14, 131074, 393223, 14, 0, 393224, 14, 2, 393225, 14, 3, 393226, 14, 0, 393227, 14, 131074, 393228, 14, 131075, 393229, 14, 131074, 393230, 14, 65537, 393231, 14, 65537, 393232, 14, 131074, 393233, 14, 131075, 393234, 14, 131073, 393235, 14, 65539, 393236, 14, 65539, 393237, 14, 131074, 393238, 14, 131074, 393239, 14, 131073, 393240, 14, 131076, 393241, 3, 0, 393242, 14, 65536, 393243, 14, 131074, 393244, 14, 131073, 393245, 14, 131076, 458752, 14, 65536, 458753, 14, 65538, 458754, 14, 131073, 458755, 14, 65537, 458756, 14, 131074, 458757, 14, 65538, 458758, 14, 131075, 458759, 14, 131074, 458760, 14, 131075, 458761, 14, 131073, 458762, 14, 65539, 458763, 14, 131074, 458764, 14, 131075, 458765, 14, 131075, 458766, 14, 65538, 458767, 14, 131075, 458768, 14, 131074, 458769, 14, 131075, 458770, 14, 131075, 458771, 14, 65539, 458772, 14, 131074, 458773, 14, 131074, 458774, 14, 131075, 458775, 14, 131073, 458776, 14, 131076, 458777, 5, 0, 458778, 14, 131072, 458779, 14, 131074, 458780, 14, 131074, 458781, 14, 65540, 524288, 14, 65536, 524289, 14, 131073, 524290, 14, 131075, 524291, 14, 131074, 524292, 14, 131074, 524293, 14, 131074, 524294, 14, 65539, 524295, 14, 131075, 524296, 14, 65537, 524297, 14, 65537, 524298, 14, 65538, 524299, 14, 65538, 524300, 14, 65539, 524301, 14, 131074, 524302, 14, 65539, 524303, 14, 65537, 524304, 14, 65539, 524305, 14, 65539, 524306, 14, 131073, 524307, 14, 65538, 524308, 14, 65539, 524309, 14, 131074, 524310, 14, 131074, 524311, 14, 65538, 524312, 14, 0, 524313, 14, 2, 524314, 14, 0, 524315, 14, 131075, 524316, 14, 65537, 524317, 14, 131076, 589824, 14, 196608, 589825, 14, 196610, 589826, 14, 196610, 589827, 14, 196610, 589828, 14, 196609, 589829, 14, 196610, 589830, 14, 196610, 589831, 14, 0, 589832, 14, 65538, 589833, 14, 65539, 589834, 14, 131074, 589835, 14, 131074, 589836, 14, 65539, 589837, 14, 131073, 589838, 14, 65538, 589839, 14, 65537, 589840, 14, 131074, 589841, 14, 131075, 589842, 14, 131073, 589843, 14, 65537, 589844, 14, 65539, 589845, 14, 65539, 589846, 14, 131074, 589847, 14, 65537, 589848, 14, 131074, 589849, 14, 131074, 589850, 14, 131074, 589851, 14, 65538, 589852, 14, 65538, 589853, 14, 131076, 655360, 12, 0, 655361, 12, 0, 655362, 12, 0, 655363, 12, 0, 655364, 12, 0, 655365, 12, 0, 655366, 11, 0, 655367, 14, 65536, 655368, 14, 65538, 655369, 14, 65539, 655370, 14, 65539, 655371, 14, 131074, 655372, 14, 65539, 655373, 14, 131074, 655374, 14, 131074, 655375, 14, 131074, 655376, 14, 131075, 655377, 14, 65538, 655378, 14, 131074, 655379, 14, 65537, 655380, 14, 131073, 655381, 14, 131073, 655382, 14, 65537, 655383, 14, 65539, 655384, 14, 131074, 655385, 14, 65537, 655386, 14, 65539, 655387, 14, 131075, 655388, 14, 65537, 655389, 14, 65540, 720896, 14, 0, 720897, 14, 1, 720898, 14, 3, 720899, 14, 1, 720900, 14, 3, 720901, 14, 4, 720902, 5, 0, 720903, 14, 65536, 720904, 14, 131073, 720905, 14, 65539, 720906, 14, 131074, 720907, 14, 131074, 720908, 14, 65537, 720909, 14, 131075, 720910, 14, 65538, 720911, 14, 65539, 720912, 14, 65537, 720913, 14, 65538, 720914, 14, 65537, 720915, 14, 0, 720916, 14, 196609, 720917, 14, 196609, 720918, 14, 196609, 720919, 14, 196609, 720920, 14, 196609, 720921, 14, 0, 720922, 14, 131075, 720923, 14, 65538, 720924, 14, 65538, 720925, 14, 65540, 786432, 14, 65536, 786433, 14, 131073, 786434, 14, 65539, 786435, 14, 131075, 786436, 14, 65537, 786437, 14, 0, 786438, 14, 3, 786439, 14, 0, 786440, 14, 65539, 786441, 14, 131075, 786442, 14, 131075, 786443, 14, 65539, 786444, 14, 65538, 786445, 14, 65538, 786446, 14, 131074, 786447, 14, 131074, 786448, 14, 65538, 786449, 14, 131074, 786450, 14, 131073, 786451, 14, 131076, 786452, 10, 0, 786453, 8, 0, 786454, 8, 0, 786455, 8, 0, 786456, 8, 0, 786457, 14, 65536, 786458, 14, 131075, 786459, 14, 65538, 786460, 14, 131073, 786461, 14, 131076, 851968, 14, 131072, 851969, 14, 65539, 851970, 14, 131074, 851971, 14, 131074, 851972, 14, 65539, 851973, 14, 65537, 851974, 14, 65538, 851975, 14, 65537, 851976, 14, 131074, 851977, 14, 65539, 851978, 14, 131074, 851979, 14, 65539, 851980, 14, 131073, 851981, 14, 131075, 851982, 14, 131075, 851983, 14, 131074, 851984, 14, 131073, 851985, 14, 131075, 851986, 14, 131073, 851987, 14, 131076, 851988, 4, 0, 851989, 14, 0, 851990, 14, 3, 851991, 14, 3, 851992, 14, 2, 851993, 14, 0, 851994, 14, 65537, 851995, 14, 131073, 851996, 14, 65538, 851997, 14, 131076, 917504, 14, 131072, 917505, 14, 65537, 917506, 14, 131073, 917507, 14, 131074, 917508, 14, 131074, 917509, 14, 65537, 917510, 14, 131073, 917511, 14, 131074, 917512, 14, 131075, 917513, 14, 65538, 917514, 14, 65538, 917515, 14, 65537, 917516, 14, 131074, 917517, 14, 131075, 917518, 14, 131074, 917519, 14, 65539, 917520, 14, 131075, 917521, 14, 65537, 917522, 14, 65537, 917523, 14, 131076, 917524, 4, 0, 917525, 14, 65536, 917526, 14, 131073, 917527, 14, 131074, 917528, 14, 131073, 917529, 14, 131073, 917530, 14, 65537, 917531, 14, 131074, 917532, 14, 65539, 917533, 14, 65540, 983040, 14, 196608, 983041, 14, 196610, 983042, 14, 196611, 983043, 14, 196611, 983044, 14, 196610, 983045, 14, 196611, 983046, 14, 196609, 983047, 14, 196609, 983048, 14, 196609, 983049, 14, 196609, 983050, 14, 196610, 983051, 14, 196609, 983052, 14, 196611, 983053, 14, 196610, 983054, 14, 196609, 983055, 14, 196610, 983056, 14, 196610, 983057, 14, 196611, 983058, 14, 196611, 983059, 14, 196612, 983060, 4, 0, 983061, 14, 196608, 983062, 14, 196610, 983063, 14, 196609, 983064, 14, 196609, 983065, 14, 196609, 983066, 14, 196609, 983067, 14, 196611, 983068, 14, 196609, 983069, 14, 196612 )

[node name="back" type="Button" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 36.0
button_mask = 3
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game by" type="Button" parent="."]
margin_left = 152.0
margin_top = 48.0
margin_right = 288.0
margin_bottom = 72.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "Game by: Max Vale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="songs by" type="Button" parent="."]
margin_left = 136.0
margin_top = 104.0
margin_right = 310.0
margin_bottom = 128.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "Songs by: Cosmonauticus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrival" type="Button" parent="."]
margin_left = 144.0
margin_top = 144.0
margin_right = 210.0
margin_bottom = 168.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "ARRIVAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="machinist" type="Button" parent="."]
margin_left = 232.0
margin_top = 144.0
margin_right = 307.0
margin_bottom = 168.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "machinist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gonda" type="Button" parent="."]
margin_left = 232.0
margin_top = 176.0
margin_right = 306.0
margin_bottom = 200.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "gonda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Button" parent="."]
margin_left = 152.0
margin_top = 176.0
margin_right = 200.0
margin_bottom = 200.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "Main"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="art" type="Button" parent="."]
margin_left = 176.0
margin_top = 216.0
margin_right = 268.0
margin_bottom = 240.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
text = "Art by: Ox72"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 136 )
scale = Vector2( 2, 2 )
fliph = true

[node name="enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 24 )
scale = Vector2( 2, 2 )
fliph = true
firing = false

[node name="enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 424, 224 )
rotation = -1.57079
scale = Vector2( 2, 2 )
start_delay = 0.5

[node name="enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 344, 88 )
rotation = 1.57079
scale = Vector2( 2, 2 )
start_delay = 1.0

[node name="enemy5" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 216 )
rotation = -1.57079
scale = Vector2( 2, 2 )
start_delay = 0.75

[connection signal="pressed" from="back" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="game by" to="." method="_on_game_by_pressed"]
[connection signal="pressed" from="songs by" to="." method="_on_songs_by_pressed"]
[connection signal="pressed" from="arrival" to="." method="_on_arrival_pressed"]
[connection signal="pressed" from="machinist" to="." method="_on_machinist_pressed"]
[connection signal="pressed" from="gonda" to="." method="_on_gonda_pressed"]
[connection signal="pressed" from="main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="art" to="." method="_on_gonda2_pressed"]
